# Copyright 2010-2024 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

exports_files([
    "abseil-cpp-20240722.0.patch",
    "highs-v1.8.0.patch",
    "protobuf-v28.3.patch",
    "pybind11_abseil.patch",
    "pybind11_bazel.patch",
    "pybind11_protobuf.patch",
    "pybind11.patch",
    "scip-v920.patch",
])
